refactor: implement command dispatcher pattern and modular subcommands